--- a/finish/index.html
+++ b/finish/index.html
@@ -18,7 +18,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
