--- a/finish/index.html
+++ b/finish/index.html
@@ -23,8 +23,8 @@
 			</div>
 		</div>
 	</div>
-	<!-- Покдлючаем библиотеку Jquery с cdn -->
-	<script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<!-- Покдлючаем библиотеку Jquery -->
+	<script src="js/jquery.min.js"></script>
 	<!-- Наш скрипт -->
 	<script src="js/app.js"></script>
 </body>
