--- a/start/index.html
+++ b/start/index.html
@@ -8,17 +8,7 @@
 </head>
 <body>
 	<div class="wrapper">
-		<button class="link" type="button">Открыть модальное окно</button>
-		<div class="modal modal--hide">
-			<div class="modal__block">
-				<div class="modal__content">
-					<h4 class="modal__title">Заголовок</h4>
-					<p class="modal__text">Разнообразный и богатый опыт новая модель организационной деятельности представляет собой интересный эксперимент проверки существенных финансовых условий.</p>
-					<!-- Кнопка для закрытия модального окна -->
-					<button class="modal__close" type="button">Закрыть</button>
-				</div>
-			</div>
-		</div>
+		<!-- Тут писать код -->
 	</div>
 	<!-- Покдлючаем библиотеку Jquery -->
 	<script src="js/jquery.min.js"></script>
